Verifvcation update
